--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,12 +3,16 @@
 <html>
 
 <head>
+    <title>About</title>
+     <link rel="icon" href="/img/weather.png">
     <link rel='stylesheet' href="/css/styles.css">
 </head>
 
 <body>
-    {{>header}}
-    <img src='/img/IMG_1505 2.JPG'>
+    <div class="main-content">
+        {{>header}}
+        <img class="portrait" src='/img/IMG_1505 2.JPG'>
+    </div>
     {{>footer}}
 </body>
 
