--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,11 +7,11 @@ body {
 
   display: flex;
   flex-direction: column;
-  min-height: 100vh
+  min-height: 100vh;
 }
 
 .main-content {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 footer {
@@ -41,3 +41,15 @@ header a {
   width: 275px;
 }
 
+input {
+  border: 1px solid #cccccc;
+  padding: 8px;
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid #888888;
+  background: #888888;
+  color: white;
+  padding: 8px;
+}
